# Cyber-AutoAgent-ng

./: .env.example  .gitignore  AGENTS.md  Brewfile  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: check-python-coverage-floor.py  set-version.py
.github/workflows/: ci.yml  claude.yml  pr-checks.yml  pr-review.yml  update-models-snapshot.yml
benchmark_harness/: README.md  run_xbow_benchmark.py
docker/: Dockerfile  Dockerfile.tools  docker-compose.yml  packages-go.sh  pip.conf  setup-cargo.sh  tools_check.py  tools_check.sh
docs/: README.md  architecture.md  context_management.md  deployment.md  memory.md  observability-evaluation.md  operation_plugins.md  prompt_management.md  prompt_optimizer.md  task_tracking.md  test_targets.md  user-instructions.md
src/: __init__.py  cyberautoagent.py
src/modules/: __init__.py
src/modules/agents/: __init__.py  agent_conversation_builder.py  cyber_autoagent.py  factory.py  patches.py  report_agent.py
src/modules/config/: README.md  __init__.py  manager.py  types.py
src/modules/config/models/: README.md  __init__.py  capabilities.py  dev_client.py  factory.py  models_snapshot.json  ollama.py
src/modules/config/providers/: README.md  litellm_config.py  ollama_config.py
src/modules/config/system/: README.md  defaults.py  environment.py  environment.yaml
src/modules/evaluation/: evaluation.py  trace_parser.py
src/modules/handlers/: __init__.py  agent_repair_hook.py  base.py  conversation_budget.py  prompt_rebuild_hook.py  report_generator.py  tool_call_repair_hook.py  utils.py
src/modules/handlers/events/: batch_emitter.py  emitters.py
src/modules/handlers/react/: react_bridge_handler.py  tool_emitters.py
src/modules/interfaces/: README.md
src/modules/interfaces/react/: README.md  package-lock.json  package.json
src/modules/operation_plugins/: README.md
src/modules/operation_plugins/code_security/: execution_prompt.md  report_agent_executive_system_prompt.md  report_agent_finding_system_prompt.md  report_prompt.md
src/modules/operation_plugins/context_navigator/: execution_prompt.md  report_agent_executive_system_prompt.md  report_agent_observation_system_prompt.md  report_prompt.md
src/modules/operation_plugins/ctf/: execution_prompt.md  module.yaml  report_agent_finding_executive_prompt.md  report_prompt.md
src/modules/operation_plugins/threat_emulation/: execution_prompt.md  report_agent_executive_system_prompt.md  report_prompt.md
src/modules/operation_plugins/web/: execution_prompt.md  module.yaml  report_agent_executive_system_prompt.md  report_prompt.md
src/modules/operation_plugins/web_recon/: execution_prompt.md  module.yaml  report_agent_executive_system_prompt.md  report_prompt.md
src/modules/prompts/: README.md  __init__.py  factory.py
src/modules/prompts/templates/: report_agent_appendix_system_prompt.md  report_agent_prompt.md  (+10 more)
src/modules/rate_limit/: rate_limit.py
src/modules/tools/: __init__.py  browser.py  channels.py  mcp.py  memory.py  oast.py  prompt_optimizer.py  report_builder.py  shell.py  stop.py  swarm.py  tool_catalog.py
src/modules/utils/: heap_monitor.py  telemetry.py  text_reducer.py
support/: README.md  build-tools.sh  cyberops-diagnose-context-usage.sh  cyberops-diagnose.sh  cyberops-journal.sh  ollama_completion_model.py
tests/: conftest.py  test_advanced_payload_coordinator.py  test_agent.py  test_agent_conversation_builder.py  test_agent_factory.py  test_agent_hooks.py  test_agent_json_tool_call_patch.py  test_agent_patches.py  test_agent_providers.py  test_auth_chain_analyzer.py  test_browser.py  test_browser_concurrency.py  test_browser_unit_coverage.py  test_bug_bounty_headers.py  test_bug_bounty_headers_env.py  test_capabilities_precedence.py  test_channels.py  test_cli_integration.py  test_config.py  test_context_utils.py  test_conversation_manager.py  test_conversation_manager_comprehensive.py  test_conversation_manager_integration.py  test_conversation_manager_mock_data.py  test_conversation_manager_shared.py  test_conversation_manager_sliding_with_preservation.py  test_conversation_manager_summarizing_with_preservation.py  test_duration_max.py  test_emitters.py  test_emitters_coverage.py  test_environment_coverage.py  test_evaluation_manager.py  test_evaluation_manager_coverage.py  test_evaluation_unit.py  test_event_batching.py  test_get_model_timeout.py  test_heap_monitor.py  test_idor_specialist.py  test_mcp.py  test_mcp_unit_coverage.py  (+51 more)
tests/targets/: docker-compose.yml
tests/test_browser_fixtures/: index.html  other.html
(+153 files in other folders)
