[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-autoagent"
version = "0.9.0"
description = "Cyber-AutoAgent: Autonomous AI agent for ethical security assessments"
readme = "README.md"
authors = [
    {name = "Patrick Double", email = "pat@patdouble.com"},
    {name = "Aaron Brown"}
]
license = {text = "MIT"}
keywords = ["cybersecurity", "penetration-testing", "autonomous", "ai-agent", "security-assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Environment :: Console"
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "strands-agents[ollama,otel,litellm]~=1.27.0",
    "strands-agents-tools~=0.4.0",
    "mem0ai~=1.0.1",
    "google-genai~=1.71.0",
    #"litellm~=1.80.0",  # let strands pull in the correct version
    "azure-identity~=1.25.0",
    "boto3~=1.42.4",
    "botocore~=1.42.4",
    "faiss-cpu~=1.13.2",
    "ollama~=0.6.1",
    "requests~=2.33.1",
    "opensearch-py~=3.1.0",
    "opentelemetry-api~=1.42.1",
    "opentelemetry-sdk~=1.42.1",
    "opentelemetry-exporter-otlp-proto-http~=1.42.1",
    "ragas~=0.4.3",
    "langfuse>=4.0.0,<5.0.0",
    "langchain-aws~=1.5.0",
    "langchain-ollama~=1.1.0",
    "langchain-litellm~=0.5.1",
    "langchain-google-genai~=4.2.4",
    "stagehand~=0.5.7",
    "pymitter~=1.1.3",
    "tldextract~=5.3.0",
    "sentence-transformers~=5.5.1",
    "standard-distutils~=3.11.9",
    "guppy3~=3.1.5",
    "validators~=0.35.0",
    "ddgs~=9.14.1",
    "rapidfuzz~=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/double16/Cyber-AutoAgent-ng"
Repository = "https://github.com/double16/Cyber-AutoAgent-ng"
Documentation = "https://github.com/double16/Cyber-AutoAgent-ng#readme"
"Bug Tracker" = "https://github.com/double16/Cyber-AutoAgent-ng/issues"

[project.scripts]
caa = "cyberautoagent:main"
cyber-autoagent = "cyberautoagent:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
pythonpath = ["src"]

[tool.pylint.main]
# Disable specific warnings that are not relevant for this project
disable = [
    "too-many-positional-arguments",  # R0917 - Common for API functions
    "unused-argument",               # W0613 - Common for API compatibility
    "too-many-lines",               # C0302 - Some modules need to be large
    "too-many-nested-blocks",       # R1702 - Complex logic sometimes needed
    "logging-fstring-interpolation", # W1203 - f-strings in logging are readable
    "redefined-outer-name",         # W0621 - Common in function parameters
    "no-else-continue",             # R1724 - Sometimes else-continue is clearer
    "attribute-defined-outside-init" # W0201 - Sometimes needed for complex initialization
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
# Allow more arguments and attributes for complex classes
max-args = 10
max-attributes = 15

[dependency-groups]
dev = [
    "pylint~=4.0.5",
    "pyright~=1.1.408",
    "pytest~=9.0.2",
    "pytest-mock~=3.15.1",
    "ruff~=0.15.2",
    "pytest-asyncio~=1.3.0",
]

[pytest]
markers = [
    "ollama: marks tests as requiring ollama",
    "serial",
]
